# pytopas

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linter.yml  pr.yml  push.yml  release.yml  test.yml
examples/: 2002698.str  4115474.str  Disordered_configuration_analysis.INP  LightForm-group-adc_040_7Nb_TDload_725C_15mms_00000.inp  NCM-Doped-stoe-29082022.INP  Raw_XY_converter.INP  determine_dI.INP  diffpy_example.INP  dmitrienka-sucrose-new.INP  mylist.txt  starting_R_lebail.INP  y2mn2o7-selectivity-1_65.INP
pytopas/: __init__.py  _transformer.py  ast.py  base.py  cli.py  exc.py  grammar.lark  grammar.py  lark_standalone.py  parser.py  token.py  transformer.py  tree.py  trivial.py
tests/: helpers.py  test_ast.py  test_base.py  test_cli_json2topas.py  test_cli_topas2json.py  test_examples.py  test_grammar.py  test_parser.py  test_token_base.py  test_token_xdd_filename.py  test_transformer.py  test_tree_base.py  test_trivial.py
tests/grammar/: func_args_params.py  func_call_params.py  parameter_params.py  test_grammar_axial_conv.py  test_grammar_bkg.py  test_grammar_block_comment.py  test_grammar_existing_prm.py  test_grammar_formula.py  test_grammar_func_args.py  test_grammar_func_call.py  test_grammar_func_name.py  test_grammar_integer.py  test_grammar_line_break.py  test_grammar_line_comment.py  test_grammar_local.py  test_grammar_macro.py  test_grammar_num_runs.py  test_grammar_number.py  test_grammar_parameter.py  test_grammar_parameter_equation.py  test_grammar_parameter_name.py  test_grammar_parameter_value.py  test_grammar_prm.py  test_grammar_quoted_str.py  test_grammar_real.py  test_grammar_root.py  test_grammar_scale.py  test_grammar_signed_integer.py  test_grammar_simple_str.py  test_grammar_string_val.py  test_grammar_text.py  test_grammar_xdd.py  test_trivial.py
tests/nodes/: test_axial_conv_node.py  test_bkg_node.py  test_existing_prm_node.py  test_formula_node.py  test_function_call_node.py  test_line_break_node.py  test_local_node.py  test_macro_node.py  test_num_runs_node.py  test_parameter_equation_node.py  test_parameter_name_node.py  test_parameter_node.py  test_parameter_value_node.py  test_paramter_name_node.py  test_paramter_value_node.py  test_prm_node.py  test_root_node.py  test_scale_node.py  test_text_node.py  test_xdd_node.py
tests/nodes/axial_conv/: maxi.in.inp  maxi.json  maxi.out.inp  mini.json
tests/nodes/bkg/: multi.json  named.in.inp  named.json  named.out.inp  simple.json  simple.out.inp
tests/nodes/formula/: digits.in.inp  digits.json  digits.out.inp  test.in.inp  test.json  test.out.inp
tests/nodes/formula_op/: FormulaAdd.FormulaAdd.one_plus_one.json  FormulaDiv.FormulaDiv.one_div_one.json  FormulaEQ.FormulaEQ.one_eq_one.json  FormulaExp.FormulaExp.one_exp_one.in.inp  FormulaExp.FormulaExp.one_exp_one.json  FormulaGE.FormulaGE.one_gt_one.json  FormulaGT.FormulaGT.one_ge_one.json  FormulaLE.FormulaLE.one_lt_one.json  FormulaLT.FormulaLT.one_le_one.json  FormulaMul.FormulaMul.one_mul_one.json  FormulaNE.FormulaNE.one_ne_one.json  FormulaSub.FormulaSub.one_minus_one.json  FormulaUnaryMinus.FormulaUnaryMinus.minus_one.json  FormulaUnaryPlus.ParameterNode.plus_one.in.inp  FormulaUnaryPlus.ParameterNode.plus_one.json
tests/nodes/function_call/: 1.in.inp  1.json  1.out.inp
tests/nodes/macro/: empty.in.inp  empty.json  empty_args.in.inp  empty_args.json  empty_args.out.inp  multi.in.inp  multi.json  multi.out.inp  num_runs.json  num_runs.out.inp  num_runs_simple.json  num_runs_simple.out.inp
tests/nodes/parameter_node/: fixed.in.inp  fixed.json  names.in.inp  names.json  refined.in.inp  refined.json
tests/nodes/root/: axial_conv.in.inp  axial_conv.json  bkg.json  bkg.out.inp  existing_prm.json  existing_prm.out.inp  func_call.json  line_break.json  local.in.inp  local.json  multi.json  multi.out.inp  num_runs.in.inp  num_runs.json  prm.json  prm.out.inp  scale.json  scale.out.inp  xdd.in.inp  xdd.json  xdd.out.inp
tests/nodes/root_warn/: cant_parse.in.inp  cant_parse.json
tests/nodes/scale/: named.json  named.out.inp  refined.in.inp  refined.json  refined.out.inp  simple.json
tests/nodes/xdd/: filename.in.inp  filename.json  filename.out.inp  filename_quoted.json  filename_spaced.in.inp  filename_spaced.out.inp  inline_data.json  inline_data.out.inp  inline_data_xy.in.inp  inline_data_xy.json  optionals.in.inp  optionals.json  optionals.out.inp  range.in.inp  range.json  range.out.inp
