[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytopas"
version = "0.0.1"
description = """Bruker's TOPAS macro language parser"""
authors = [{name = "Sergei Korolev", email = "knopki@duck.com"}]
readme = "README.md"
license = {file = "LICENSE"} # TODO
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
keywords = ["TOPAS", "XRPD", "Rietveld refinement", "pair distribution function", "stacking-faults", "charge flipping", "structure solution", "deconvolution"]
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "lark >= 1.1.7",
]
lint = [
     "autoflake",
     "black >= 23.1",
     "flake8",
     "flake8-bugbear",
     "isort",
     "pylint",
     "pylint-per-file-ignores >= 1, < 1.4",
     "pyupgrade",
]
test = [
    "pytest",
    "pytest-cov",
]
release = [
    "commitizen",
    "flit",
]

[project.urls]
Home = "https://github.com/metis-science/pytopas"
Changelog = "https://github.com/metis-science/pytopas/blob/master/CHANGELOG.md"
Issues = "https://github.com/metis-science/pytopas/issues"
Source = "https://github.com/metis-science/pytopas"

[project.scripts]
topas2json = "pytopas.cli:topas2json"
json2topas = "pytopas.cli:json2topas"

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
exclude = "pytopas/lark_standalone.py"

[tool.black]
exclude = "pytopas/lark_standalone.py"
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
major_version_zero = true
version_files = [
    "pyproject.toml:^version",
    "pytopas/__init__.py:^__version__",
]
version_provider = "pep621"
update_changelog_on_bump = true

[tool.coverage.run]
omit = ['pytopas/lark_standalone.py', 'tests/*']

[tool.flit.module]
name = "pytopas"

[tool.flit.sdist]
include = ["pytopas/grammar.lark"]

[tool.isort]
profile = "black"
py_version = 38
skip = ["pytopas/lark_standalone.py"]

[tool.pylint.MASTER]
ignore = "lark_standalone.py"
load-plugins=[
    "pylint_per_file_ignores",
]

[tool.pylint.main]
jobs = 0
py-version = "3.8"
recursive = true
suggestion-mode = true

[tool.pylint.basic]
good-names = ["id", "x", "xy", "y", "_", "__"]

[tool.pylint.design]
max-args = 7
max-attributes = 10
min-public-methods = 1

[tool.pylint.format]
max-line-length = 88

[tool.pylint.reports]
output-format = "colorized"
reports = "no"
score = "no"

[tool.pylint-per-file-ignores]
"/tests/" = "redefined-outer-name"

[tool.pytest.ini_options]
addopts = "--cov=pytopas --cov-report=term --no-cov-on-fail --cov-fail-under=99"
